add rawHeader handling for non parsable content-types and corresponding tests
add configuration to provide additional fallback media-types for compatibility

Signed-off-by: Joel Bartelheimer <joel.bartelheimer@bosch.io>